# QtLevel

./: CMakeLists.txt  LICENSE  LevelPage.qml  QtLevel_en_US.ts  README.md  SettingsPage.qml  StyleHelper.cpp  StyleHelper.h  Util.js  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
android/: AndroidManifest.xml
